Correct the new Helvetica bold on iOS8
iOS8 was displaying the bold font pretty badly, looked more like Impact. This commit solves this by using `font-family: "HelveticaNeue-Bold";`.

--- a/style.scss
+++ b/style.scss
@@ -121,6 +121,10 @@ h4,
 	color: $gray;
 }
 
+strong {
+	font-family:"HelveticaNeue-Bold";
+}
+
 p {
 	margin: 0 0 2rem 0;		// 36px
 	line-height: inherit;
